2-k3s/11.argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/part-of: argocd
